--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <!--Brand button-->
-        <!--<a href="#" class="login" title="Login"><img src="img/logo.png" /></a>-->
-        <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/logo.png" width=120px height=40px/></a>
+        <!--<a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/logo.png" width=120px height=40px/></a>-->
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">WONDERMOMS</a>
         <!-- Menu -->
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
@@ -44,7 +44,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">Download</a>
+              <a class="nav-link js-scroll-trigger" href="#wondermoms-app">Wondermoms-App</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#features">Features</a>
@@ -84,6 +84,70 @@
         </div>
       </div>
     </header>
+    <!-- Wondermoms App -->
+    <section class="features" id="wondermoms-app">
+      <div class="container">
+        <div class="section-heading text-center">
+          <h2>Wondermoms App (coming soon!)</h2>
+          <p class="text-muted">Wondermoms app allows mothers to create playlist of Youtube videos and manage other parental controls for their kids safe online experience.</p>
+          <hr>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 my-auto">
+            <div class="device-container">
+              <div class="device-mockup galaxy_s5 gold portrait">
+                <div class="device">
+                  <div class="screen">
+                    <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
+                    <img src="img/Home.png" class="img-fluid" alt="">
+                  </div>
+                  <div class="button">
+                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-8 my-auto">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="feature-item">
+                    <i class="icon-screen-smartphone text-primary"></i>
+                    <h3>Create Child Playlist </h3>
+                    <p class="text-muted">Create a playlist by adding safe videos from Youtube for your child!</p>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="feature-item">
+                    <i class="icon-camera text-primary"></i>
+                    <h3>Add parental controls</h3>
+                    <p class="text-muted">Enable/Disable access to safe search or set access time window for your child's app! </p>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="feature-item">
+                    <i class="icon-present text-primary"></i>
+                    <h3>Review statistics from kid's app</h3>
+                    <p class="text-muted">Review content your kid is watching and instantly block anything inappropriate</p>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="feature-item">
+                    <i class="icon-lock-open text-primary"></i>
+                    <h3>More learning games soon!</h3>
+                    <p class="text-muted">We plan to add more learning games for your kid's holisitic learning needs!</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
     <section class="download bg-primary text-center" id="download">
       <div class="container">
