first version website complete

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
               <a class="nav-link js-scroll-trigger" href="#wondermoms-app">Wondermoms-App</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#features">Features</a>
+              <a class="nav-link js-scroll-trigger" href="#wonderkids-app">Wonderkids-App</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#rate-my-school">Rate-My-School</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -63,7 +66,7 @@
           <div class="col-lg-12 my-auto">
             <div class="header-content mx-auto">
               <h1 class="mb-5">Wondermoms builds products to help mothers efficiently manage their child's learning needs.</h1>
-              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">CLICK FOR MORE!</a>
+              <a href="#wondermoms-app" class="btn btn-outline btn-xl js-scroll-trigger">CLICK FOR MORE!</a>
             </div>
           </div>
         <!--  <div class="col-lg-5 my-auto">
@@ -88,7 +91,7 @@
     <section class="features" id="wondermoms-app">
       <div class="container">
         <div class="section-heading text-center">
-          <h2>Wondermoms App (coming soon!)</h2>
+          <h2>Wondermoms App (Coming Soon!)</h2>
           <p class="text-muted">Wondermoms app allows mothers to create playlist of Youtube videos and manage other parental controls for their kids safe online experience.</p>
           <hr>
         </div>
@@ -114,7 +117,7 @@
                 <div class="col-lg-6">
                   <div class="feature-item">
                     <i class="icon-screen-smartphone text-primary"></i>
-                    <h3>Create Child Playlist </h3>
+                    <h3>Create Child<br/>Playlist </h3>
                     <p class="text-muted">Create a playlist by adding safe videos from Youtube for your child!</p>
                   </div>
                 </div>
@@ -148,8 +151,89 @@
       </div>
     </section>
 
+    <!-- Wonder kids app -->
+    <section class="features bg-semiprimary" id="wonderkids-app">
+      <div class="container">
+        <div class="section-heading text-center">
+          <h2>Wonderkids App (Coming Soon!)</h2>
+          <p class="text-muted">Wonderkids app allows kids to watch safe Youtube videos and play various learning games</p>
+          <hr>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 my-auto">
+            <div class="device-container">
+              <div class="device-mockup galaxy_s5 gold portrait">
+                <div class="device">
+                  <div class="screen">
+                    <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
+                    <img src="img/wonderkids.png" class="img-fluid" alt="">
+                  </div>
+                  <div class="button">
+                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-8 my-auto">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="feature-item">
+                    <i class="icon-screen-smartphone text-primary"></i>
+                    <h3>Access Child Playlist</h3>
+                    <p class="text-muted">Access to playlist setup in wondermoms app</p>
+                  </div>
+                </div>
+              <!--  <div class="col-lg-6">
+                  <div class="feature-item">
+                    <i class="icon-camera text-primary"></i>
+                    <h3>Flexible Use</h3>
+                    <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                  </div>
+                </div>-->
+              </div>
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="feature-item">
+                    <i class="icon-present text-primary"></i>
+                    <h3>Search Safe Youtube videos</h3>
+                    <p class="text-muted">Search & access safe Youtube kids videos and channels</p>
+                  </div>
+                </div>
+                <!--<div class="col-lg-6">
+                  <div class="feature-item">
+                    <i class="icon-lock-open text-primary"></i>
+                    <h3>Open Source</h3>
+                    <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                  </div>
+                </div> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <section class="download bg-primary text-center" id="download">
+<!-- Rate My School -->
+    <section class="download text-center" id="rate-my-school">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 mx-auto">
+            <h2 class="section-heading">Rate My School <br/>Web app (coming soon!)</h2>
+            <p>A website containg curated reviews of schools (city wise) to help mothers make the most informed selection of their kid's first school</p>
+            <div class="badges">
+              <a href="#download" class="btn btn-dark-outline btn-xl js-scroll-trigger">GO TO WEBSITE</a>
+            <!--  <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
+              <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a> -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+<!--    <section class="download bg-primary text-center" id="download">
       <div class="container">
         <div class="row">
           <div class="col-md-8 mx-auto">
@@ -162,72 +246,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="features" id="features">
-      <div class="container">
-        <div class="section-heading text-center">
-          <h2>Unlimited Features, Unlimited Fun</h2>
-          <p class="text-muted">Check out what you can do with this app theme!</p>
-          <hr>
-        </div>
-        <div class="row">
-          <div class="col-lg-4 my-auto">
-            <div class="device-container">
-              <div class="device-mockup iphone6_plus portrait white">
-                <div class="device">
-                  <div class="screen">
-                    <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                    <img src="img/demo-screen-1.jpg" class="img-fluid" alt="">
-                  </div>
-                  <div class="button">
-                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-8 my-auto">
-            <div class="container-fluid">
-              <div class="row">
-                <div class="col-lg-6">
-                  <div class="feature-item">
-                    <i class="icon-screen-smartphone text-primary"></i>
-                    <h3>Device Mockups</h3>
-                    <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="feature-item">
-                    <i class="icon-camera text-primary"></i>
-                    <h3>Flexible Use</h3>
-                    <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-6">
-                  <div class="feature-item">
-                    <i class="icon-present text-primary"></i>
-                    <h3>Free to Use</h3>
-                    <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="feature-item">
-                    <i class="icon-lock-open text-primary"></i>
-                    <h3>Open Source</h3>
-                    <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="cta">
+<!--    <section class="cta">
       <div class="cta-content">
         <div class="container">
           <h2>Stop waiting.<br>Start building.</h2>
@@ -235,9 +256,9 @@
         </div>
       </div>
       <div class="overlay"></div>
-    </section>
+    </section> -->
 
-    <section class="contact bg-primary" id="contact">
+    <section class="contact bg-semiprimary" id="contact">
       <div class="container">
         <h2>We
           <i class="fa fa-heart"></i>
@@ -264,7 +285,7 @@
 
     <footer>
       <div class="container">
-        <p>&copy; Your Website 2018. All Rights Reserved.</p>
+        <p>&copy; Wondermoms website 2018. All Rights Reserved.</p>
         <ul class="list-inline">
           <li class="list-inline-item">
             <a href="#">Privacy</a>
