--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#wonderkids-app">Wonderkids-App</a>
             </li>
+            <!--
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#rate-my-school">Rate-My-School</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
@@ -116,14 +117,16 @@
               <div class="row">
                 <div class="col-lg-6">
                   <div class="feature-item">
-                    <i class="icon-screen-smartphone text-primary"></i>
-                    <h3>Create Child<br/>Playlist </h3>
+                    <img src="img/playlist.png" class="img-fluid" alt="">
+                    <!--<i class="icon-screen-smartphone text-primary"></i> -->
+                    <h3>Create Child Playlist </h3>
                     <p class="text-muted">Create a playlist by adding safe videos from Youtube for your child!</p>
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="feature-item">
-                    <i class="icon-camera text-primary"></i>
+                    <img src="img/controls.png" class="img-fluid" alt="">
+                    <!--<i class="icon-camera text-primary"></i>-->
                     <h3>Add parental controls</h3>
                     <p class="text-muted">Enable/Disable access to safe search or set access time window for your child's app! </p>
                   </div>
@@ -132,14 +135,16 @@
               <div class="row">
                 <div class="col-lg-6">
                   <div class="feature-item">
-                    <i class="icon-present text-primary"></i>
+                    <img src="img/stats.png" class="img-fluid" alt="">
+                    <!--<i class="icon-present text-primary"></i>-->
                     <h3>Review statistics from kid's app</h3>
                     <p class="text-muted">Review content your kid is watching and instantly block anything inappropriate</p>
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="feature-item">
-                    <i class="icon-lock-open text-primary"></i>
+                    <img src="img/more.png" class="img-fluid" alt="">
+                    <!--<i class="icon-lock-open text-primary"></i>-->
                     <h3>More learning games soon!</h3>
                     <p class="text-muted">We plan to add more learning games for your kid's holisitic learning needs!</p>
                   </div>
@@ -180,7 +185,8 @@
               <div class="row">
                 <div class="col-lg-12">
                   <div class="feature-item">
-                    <i class="icon-screen-smartphone text-primary"></i>
+                    <img src="img/access-child-playlist.png" class="img-fluid" alt="">
+                    <!-- <i class="icon-screen-smartphone text-primary"></i> -->
                     <h3>Access Child Playlist</h3>
                     <p class="text-muted">Access to playlist setup in wondermoms app</p>
                   </div>
@@ -196,7 +202,8 @@
               <div class="row">
                 <div class="col-lg-12">
                   <div class="feature-item">
-                    <i class="icon-present text-primary"></i>
+                    <img src="img/safesearch.png" class="img-fluid" alt="">
+                    <!--<i class="icon-present text-primary"></i>-->
                     <h3>Search Safe Youtube videos</h3>
                     <p class="text-muted">Search & access safe Youtube kids videos and channels</p>
                   </div>
@@ -216,7 +223,7 @@
     </section>
 
 <!-- Rate My School -->
-    <section class="download text-center" id="rate-my-school">
+    <section class="download text-center" style="display:none" id="rate-my-school">
       <div class="container">
         <div class="row">
           <div class="col-md-8 mx-auto">
@@ -231,7 +238,6 @@
         </div>
       </div>
     </section>
-
 
 <!--    <section class="download bg-primary text-center" id="download">
       <div class="container">
@@ -258,7 +264,7 @@
       <div class="overlay"></div>
     </section> -->
 
-    <section class="contact bg-semiprimary" id="contact">
+    <section class="contact" id="contact">
       <div class="container">
         <h2>We
           <i class="fa fa-heart"></i>
@@ -286,17 +292,18 @@
     <footer>
       <div class="container">
         <p>&copy; Wondermoms website 2018. All Rights Reserved.</p>
+        <!--
         <ul class="list-inline">
           <li class="list-inline-item">
-            <a href="#">Privacy</a>
+            <a href="">Privacy</a>
           </li>
           <li class="list-inline-item">
-            <a href="#">Terms</a>
+            <a href="">Terms</a>
           </li>
           <li class="list-inline-item">
-            <a href="#">FAQ</a>
+            <a href="">FAQ</a>
           </li>
-        </ul>
+        </ul> -->
       </div>
     </footer>
 
